chore: release 2.0.7 with new unit test support and maintenance updates
This release introduces a new `test-unit` source set for plain JVM unit tests, allowing for faster, IDE-independent testing without relying on PowerMock. Key changes include:

- Added a `unitTest` task to run the new test suite, which uses JUnit 4.
- Updated the build configuration to support the new unit test source set and dependencies.
- Enhanced error handling in the TFVC checkout process, including better workspace management and validation in the "Create Branch" dialog.
- Replaced deprecated `java.util.Observable`/`Observer` with custom implementations across UI models and controllers.

These updates improve the plugin's stability and prepare it for future IDE versions.